--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,7 @@ version: 2
 updates:
 
   - package-ecosystem: "npm"
-    directory: "/"
+    directory: "/project/"
     schedule:
       # Check for updates to GitHub Actions every weekday
       interval: "daily"
